Изменить метод getDefault в классе Managers. Добавить сохранение в файл при удалении задачи в классе FileBackedTaskManager. Добавить константу HEADER для записи заголовка в файл в классе FileBackedTaskManager.